Fixes Overflow Styling Issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
         max-width: 100%;
         min-width: 500px;
         background-color: $secondary-background;
-        overflow: scroll;
+        overflow: hidden;
         .site-content {
             width: 100%;
             height: calc(100% - #{$navbar-height});
